# py-autoload

./: MANIFEST.in  README.md  README.pypi.md  example.py  setup.cfg
example_package/: __init__.py
