[metadata]
name = import-autoload
version = attr:autoload.__version__
description = This helper provides simplified loading of modules (files) from package (dir)
long_description = file:README.pypi.md
long_description_content_type = text/markdown
author = JL Connor
#author_email = 
license = GLWTPL
license_files = LICENSE
#url = 
keywords = autoload, autoloader, import, module

classifiers =
	#Development Status :: 3 - Alpha
    Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: Freeware
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    #Topic :: Utilities

#project_urls =
#    Source Code = 
#    Bug Tracker = 

[options]
#packages = autoloader
python_requires = >=3
#install_requires = requirements.txt
#install_requires = 
setup_requires =
	wheel
py_modules =
	autoload

#[options.entry_points]
#console_scripts =
#	cli-script=src.cli:main
    
